add ValueAnimator, ObjectAnimator, AnmatorSet

--- a/app/src/main/res/layout/activity_animations_and_transitions.xml
+++ b/app/src/main/res/layout/activity_animations_and_transitions.xml
@@ -3,6 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".activities.AnimationsAndTransitions">
 
+    <Button
+        android:id="@+id/btn_animator"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/animator_demo" />
+
+    <Button
+        android:id="@+id/btn_animator_set"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/animator_set_demo" />
 </LinearLayout>
