--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,5 +22,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/jetpack" />
+    <Button
+        android:id="@+id/btn_testing"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/testing" />
 
 </LinearLayout>
