--- a/app/src/main/res/layout/activity_custom_circular_progress_bar.xml
+++ b/app/src/main/res/layout/activity_custom_circular_progress_bar.xml
@@ -1,39 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:custom="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".activities.CustomCircularProgressBar">
 
+    <TextView
+        android:id="@+id/tv_process"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true" />
+
     <com.github.crazygit.gist.widget.CircularProgressBar
         android:id="@+id/progress_circular"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        custom:arcColor="@android:color/holo_green_dark"
-        custom:backgroundCircularColor="@android:color/darker_gray"
-        custom:process="50"
-        custom:radius="100dp"
-        custom:strokeWidth="20dp" />
+        app:arcColor="@android:color/holo_green_dark"
+        app:backgroundCircularColor="@android:color/darker_gray"
+        app:process="50"
+        app:radius="100dp"
+        app:strokeWidth="20dp" />
+
+    <LinearLayout
+        android:id="@+id/ll_manual"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/progress_circular"
+        android:layout_centerHorizontal="true">
+
+        <Button
+            android:id="@+id/btn_increase_progress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/increase_progress" />
+
+        <Button
+            android:id="@+id/btn_decrease_progress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/decrease_progress" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/progress_circular"
+        android:layout_below="@id/ll_manual"
         android:layout_centerHorizontal="true"
-        >
-    <Button
-        android:id="@+id/btn_increase_progress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/increase_progress" />
-    <Button
-        android:id="@+id/btn_decrease_progress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/decrease_progress" />
-    </LinearLayout>
+        android:orientation="horizontal">
 
+        <Button
+            android:id="@+id/btn_start_animator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/start_with_animator" />
+    </LinearLayout>
 </RelativeLayout>
